fix(client): fixed spacing between the heading and the description in the Connections view for a Service

--- a/packages/amplication-client/src/ServiceConnections/ServiceTopics.scss
+++ b/packages/amplication-client/src/ServiceConnections/ServiceTopics.scss
@@ -11,6 +11,7 @@
       display: flex;
       align-items: center;
       gap: var(--default-spacing-small);
+      margin-bottom: 12px;
 
       &__title {
         font-size: 18px;
